--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "import-fresh": "^3.3.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.1",
@@ -24,7 +25,8 @@
     "test": "node ./tests/runTests.js",
     "lint": "eslint_d FlowPluginsTs Community methods examples tests --ext js,ts",
     "lint:fix": "eslint_d FlowPluginsTs Community methods examples tests --ext js,ts --fix",
-    "checkPlugins": "node ./tests/checkPlugins.js"
+    "checkPlugins": "node ./tests/checkPlugins.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
